--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "next": "14.2.3",
     "react": "^18",
+    "react-content-loader": "^7.0.2",
     "react-dom": "^18"
   },
   "devDependencies": {
